--- a/.config
+++ b/.config
@@ -1,1 +1,13 @@
 # This is an empty file, please overwrite it after generating the .config file with the source code
+CONFIG_TARGET_ramips=y
+CONFIG_TARGET_ramips_mt76x8=y
+CONFIG_TARGET_ramips_mt76x8_DEVICE_xiaomi_mi-router-4c=y
+
+CONFIG_PACKAGE_kmod-usb-core=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb-net=y
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
+
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_usbutils=y
