--- a/.config
+++ b/.config
@@ -3,11 +3,32 @@ CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt76x8=y
 CONFIG_TARGET_ramips_mt76x8_DEVICE_xiaomi_mi-router-4c=y
 
+# Luci minimal (non-SSL)
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_luci-mod-admin-full=y
+CONFIG_PACKAGE_luci-theme-openwrt=y
+# Jangan gunakan luci-ssl-openssl karena besar
+# CONFIG_PACKAGE_luci-ssl-openssl is not set
+
+# USB + RNDIS
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb-net=y
 CONFIG_PACKAGE_kmod-usb-net-rndis=y
 CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
 
-CONFIG_PACKAGE_luci=y
+# Utility
 CONFIG_PACKAGE_usbutils=y
+
+# Hilangkan PPP & IPv6
+CONFIG_PACKAGE_ppp=n
+CONFIG_PACKAGE_ppp-mod-pppoe=n
+CONFIG_PACKAGE_ipv6=n
+CONFIG_PACKAGE_kmod-ipv6=n
+CONFIG_IPV6=n
+
+# Misc
+CONFIG_STRIP_KERNEL_EXPORTS=y
+CONFIG_KERNEL_BUILD_USER="openwrt"
+CONFIG_KERNEL_BUILD_DOMAIN="local"
