--- a/.config
+++ b/.config
@@ -1,34 +1,40 @@
-# This is an empty file, please overwrite it after generating the .config file with the source code
+# Target board dan device
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt76x8=y
 CONFIG_TARGET_ramips_mt76x8_DEVICE_xiaomi_mi-router-4c=y
 
-# Luci minimal (non-SSL)
+# Luci (non-SSL) + Theme ringan
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-theme-openwrt=y
-# Jangan gunakan luci-ssl-openssl karena besar
+# Jangan aktifkan luci-ssl
 # CONFIG_PACKAGE_luci-ssl-openssl is not set
 
-# USB + RNDIS
+# USB dan RNDIS Support
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb-net=y
 CONFIG_PACKAGE_kmod-usb-net-rndis=y
 CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
 
-# Utility
-CONFIG_PACKAGE_usbutils=y
+# Utility ringan
+CONFIG_PACKAGE_usbutils=n     # Bisa kamu install nanti via SCP kalau perlu
 
-# Hilangkan PPP & IPv6
+# Nonaktifkan PPP, IPv6
 CONFIG_PACKAGE_ppp=n
 CONFIG_PACKAGE_ppp-mod-pppoe=n
 CONFIG_PACKAGE_ipv6=n
 CONFIG_PACKAGE_kmod-ipv6=n
 CONFIG_IPV6=n
+CONFIG_PACKAGE_dnsmasq=n       # dnsmasq-lite akan otomatis disertakan
+CONFIG_PACKAGE_firewall4=n
+CONFIG_PACKAGE_odhcpd=n
+CONFIG_PACKAGE_odhcp6c=n
 
-# Misc
+# Kernel strip & optimasi
 CONFIG_STRIP_KERNEL_EXPORTS=y
-CONFIG_KERNEL_BUILD_USER="openwrt"
-CONFIG_KERNEL_BUILD_DOMAIN="local"
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_IMAGES_GZIP=n
+CONFIG_TARGET_KERNEL_PARTSIZE=2048
+CONFIG_TARGET_ROOTFS_PARTSIZE=14000
