--- a/.config
+++ b/.config
@@ -1,40 +1,46 @@
-# Target board dan device
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt76x8=y
 CONFIG_TARGET_ramips_mt76x8_DEVICE_xiaomi_mi-router-4c=y
 
-# Luci (non-SSL) + Theme ringan
+# Sistem inti & web UI minimal
+CONFIG_PACKAGE_base-files=y
+CONFIG_PACKAGE_busybox=y
+CONFIG_PACKAGE_ca-bundle=y
+CONFIG_PACKAGE_dnsmasq=y
+CONFIG_PACKAGE_dropbear=y
+CONFIG_PACKAGE_firewall4=y
+CONFIG_PACKAGE_fstools=y
+CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
+CONFIG_PACKAGE_kmod-leds-gpio=y
+CONFIG_PACKAGE_kmod-mt7603=y
+CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_libc=y
+CONFIG_PACKAGE_libgcc=y
+CONFIG_PACKAGE_libustream-mbedtls=y
+CONFIG_PACKAGE_logd=y
+CONFIG_PACKAGE_mtd=y
+CONFIG_PACKAGE_netifd=y
+CONFIG_PACKAGE_nftables=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_opkg=y
+CONFIG_PACKAGE_ppp=y
+CONFIG_PACKAGE_ppp-mod-pppoe=y
+CONFIG_PACKAGE_procd=y
+CONFIG_PACKAGE_procd-seccomp=y
+CONFIG_PACKAGE_procd-ujail=y
+CONFIG_PACKAGE_swconfig=y
+CONFIG_PACKAGE_uci=y
+CONFIG_PACKAGE_uclient-fetch=y
+CONFIG_PACKAGE_urandom-seed=y
+CONFIG_PACKAGE_urngd=y
+CONFIG_PACKAGE_wpad-basic-mbedtls=y
+CONFIG_PACKAGE_uboot-envtools=y
 CONFIG_PACKAGE_luci=y
-CONFIG_PACKAGE_luci-base=y
-CONFIG_PACKAGE_luci-mod-admin-full=y
-CONFIG_PACKAGE_luci-theme-openwrt=y
-# Jangan aktifkan luci-ssl
-# CONFIG_PACKAGE_luci-ssl-openssl is not set
 
-# USB dan RNDIS Support
+# Tambahan RNDIS (USB Tethering)
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb-net=y
 CONFIG_PACKAGE_kmod-usb-net-rndis=y
 CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
-
-# Utility ringan
-CONFIG_PACKAGE_usbutils=n     # Bisa kamu install nanti via SCP kalau perlu
-
-# Nonaktifkan PPP, IPv6
-CONFIG_PACKAGE_ppp=n
-CONFIG_PACKAGE_ppp-mod-pppoe=n
-CONFIG_PACKAGE_ipv6=n
-CONFIG_PACKAGE_kmod-ipv6=n
-CONFIG_IPV6=n
-CONFIG_PACKAGE_dnsmasq=n       # dnsmasq-lite akan otomatis disertakan
-CONFIG_PACKAGE_firewall4=n
-CONFIG_PACKAGE_odhcpd=n
-CONFIG_PACKAGE_odhcp6c=n
-
-# Kernel strip & optimasi
-CONFIG_STRIP_KERNEL_EXPORTS=y
-CONFIG_TARGET_ROOTFS_SQUASHFS=y
-CONFIG_TARGET_IMAGES_GZIP=n
-CONFIG_TARGET_KERNEL_PARTSIZE=2048
-CONFIG_TARGET_ROOTFS_PARTSIZE=14000
