--- a/.config
+++ b/.config
@@ -1,46 +1,28 @@
-CONFIG_TARGET_ramips=y
-CONFIG_TARGET_ramips_mt76x8=y
-CONFIG_TARGET_ramips_mt76x8_DEVICE_xiaomi_mi-router-4c=y
+# Jangan compress dengan gzip (hemat ukuran)
+CONFIG_TARGET_IMAGES_GZIP=n
 
-# Sistem inti & web UI minimal
-CONFIG_PACKAGE_base-files=y
-CONFIG_PACKAGE_busybox=y
-CONFIG_PACKAGE_ca-bundle=y
-CONFIG_PACKAGE_dnsmasq=y
-CONFIG_PACKAGE_dropbear=y
-CONFIG_PACKAGE_firewall4=y
-CONFIG_PACKAGE_fstools=y
-CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
-CONFIG_PACKAGE_kmod-leds-gpio=y
-CONFIG_PACKAGE_kmod-mt7603=y
-CONFIG_PACKAGE_kmod-nft-offload=y
-CONFIG_PACKAGE_libc=y
-CONFIG_PACKAGE_libgcc=y
-CONFIG_PACKAGE_libustream-mbedtls=y
-CONFIG_PACKAGE_logd=y
-CONFIG_PACKAGE_mtd=y
-CONFIG_PACKAGE_netifd=y
-CONFIG_PACKAGE_nftables=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_opkg=y
-CONFIG_PACKAGE_ppp=y
-CONFIG_PACKAGE_ppp-mod-pppoe=y
-CONFIG_PACKAGE_procd=y
-CONFIG_PACKAGE_procd-seccomp=y
-CONFIG_PACKAGE_procd-ujail=y
-CONFIG_PACKAGE_swconfig=y
-CONFIG_PACKAGE_uci=y
-CONFIG_PACKAGE_uclient-fetch=y
-CONFIG_PACKAGE_urandom-seed=y
-CONFIG_PACKAGE_urngd=y
-CONFIG_PACKAGE_wpad-basic-mbedtls=y
-CONFIG_PACKAGE_uboot-envtools=y
-CONFIG_PACKAGE_luci=y
+# Strip symbol dari kernel dan modul
+CONFIG_STRIP_KERNEL_EXPORTS=y
+CONFIG_KERNEL_DEBUG=n
 
-# Tambahan RNDIS (USB Tethering)
-CONFIG_PACKAGE_kmod-usb-core=y
-CONFIG_PACKAGE_kmod-usb2=y
-CONFIG_PACKAGE_kmod-usb-net=y
-CONFIG_PACKAGE_kmod-usb-net-rndis=y
-CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
+# Gunakan squashfs (default, terkompresi maksimal)
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+
+# Jangan terlalu besar partisi rootfs
+CONFIG_TARGET_ROOTFS_PARTSIZE=14000
+CONFIG_TARGET_KERNEL_PARTSIZE=2048
+
+# Jangan include luci ssl
+# CONFIG_PACKAGE_luci-ssl-openssl is not set
+
+# Nonaktifkan ipv6 dan ppp
+CONFIG_PACKAGE_ipv6=n
+CONFIG_PACKAGE_ppp=n
+
+# Kalau perlu: ganti luci-theme jadi openwrt
+CONFIG_PACKAGE_luci-theme-bootstrap=n
+CONFIG_PACKAGE_luci-theme-openwrt=y
+
+# Ubah semua paket opsional ke modular (m)
+CONFIG_PACKAGE_usbutils=m
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=m
