--- a/.config
+++ b/.config
@@ -1,61 +1,51 @@
-# Configuration for OpenWrt build on Xiaomi Mi Router 4C (MT7628AN)
-# Flash size: 16MB
-
-CONFIG_TARGET=ramips
+CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt76x8=y
 CONFIG_TARGET_ramips_mt76x8_DEVICE_xiaomi_mi-router-4c=y
 
-# Minimal set of required packages
-CONFIG_PACKAGE_base-files=y
-CONFIG_PACKAGE_busybox=y
-CONFIG_PACKAGE_ca-bundle=y
-CONFIG_PACKAGE_dnsmasq=y
-CONFIG_PACKAGE_dropbear=y
-CONFIG_PACKAGE_firewall4=y
-CONFIG_PACKAGE_fstools=y
-CONFIG_PACKAGE_kmod-gpio-button-hotplug=y
-CONFIG_PACKAGE_kmod-leds-gpio=y
-CONFIG_PACKAGE_kmod-mt7603=y
-CONFIG_PACKAGE_kmod-nft-offload=y
-CONFIG_PACKAGE_libc=y
-CONFIG_PACKAGE_libgcc=y
-CONFIG_PACKAGE_libustream-mbedtls=y
-CONFIG_PACKAGE_logd=y
-CONFIG_PACKAGE_mtd=y
-CONFIG_PACKAGE_netifd=y
-CONFIG_PACKAGE_nftables=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_opkg=y
-CONFIG_PACKAGE_ppp=y
-CONFIG_PACKAGE_ppp-mod-pppoe=y
-CONFIG_PACKAGE_procd=y
-CONFIG_PACKAGE_procd-seccomp=y
-CONFIG_PACKAGE_procd-ujail=y
-CONFIG_PACKAGE_swconfig=y
-CONFIG_PACKAGE_uci=y
-CONFIG_PACKAGE_uclient-fetch=y
-CONFIG_PACKAGE_urandom-seed=y
-CONFIG_PACKAGE_urngd=y
-CONFIG_PACKAGE_wpad-basic-mbedtls=y
-CONFIG_PACKAGE_uboot-envtools=y
-CONFIG_PACKAGE_luci=y
-
-# USB RNDIS support
+# USB & RNDIS
 CONFIG_PACKAGE_kmod-usb-core=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb-net=y
-CONFIG_PACKAGE_kmod-usb-net-rndis=y
 CONFIG_PACKAGE_kmod-usb-net-cdc-ether=y
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
+CONFIG_PACKAGE_usbutils=y
 
-# Disable unwanted packages
-CONFIG_PACKAGE_ipv6helper=n
+# LuCI ringan (non-SSL)
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_luci-mod-admin-full=y
+CONFIG_PACKAGE_luci-theme-openwrt=y
+CONFIG_PACKAGE_uhttpd=y
+CONFIG_PACKAGE_rpcd=y
 
-# Set firmware partition size limit to match flash layout
-CONFIG_TARGET_ROOTFS_PARTSIZE=15
+# CLI tools
+CONFIG_PACKAGE_opkg=y
+CONFIG_PACKAGE_uci=y
+CONFIG_PACKAGE_busybox=y
+CONFIG_PACKAGE_dropbear=y
+CONFIG_PACKAGE_logd=y
+CONFIG_PACKAGE_urandom-seed=y
 
-# Optional: compress rootfs with squashfs
+# Networking dasar
+CONFIG_PACKAGE_dnsmasq=y
+CONFIG_PACKAGE_firewall4=y
+CONFIG_PACKAGE_kmod-nft-core=y
+CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_nftables-json=y
+
+# Nonaktifkan hal yang tidak perlu
+CONFIG_PACKAGE_ipv6=n
+CONFIG_IPV6=n
+CONFIG_PACKAGE_ppp=n
+CONFIG_PACKAGE_pppoe=n
+CONFIG_PACKAGE_luci-ssl-openssl=n
+CONFIG_PACKAGE_wpad-basic-mbedtls=y
+CONFIG_PACKAGE_luci-app-firewall=y
+
+# Ukuran partisi dan optimasi
+CONFIG_TARGET_IMAGES_GZIP=n
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
-
-# Use mbedTLS (already in wpad-basic-mbedtls)
-CONFIG_LIBSODIUM_MINIMAL=n
+CONFIG_STRIP_KERNEL_EXPORTS=y
+CONFIG_KERNEL_DEBUG=n
+CONFIG_TARGET_KERNEL_PARTSIZE=2048
+CONFIG_TARGET_ROOTFS_PARTSIZE=12000
