--- a/.config
+++ b/.config
@@ -28,6 +28,7 @@ CONFIG_PACKAGE_urandom-seed=y
 
 # Networking dasar
 CONFIG_PACKAGE_dnsmasq=y
+CONFIG_PACKAGE_dnsmasq-full=n
 CONFIG_PACKAGE_firewall4=y
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-offload=y
